Header Concept Completed (without RW)

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,20 +1,20 @@
 <header id="header">
   <nav class="navbar is-transparent is-spaced">
     <div class="navbar-brand">
-      <a class="navbar-item" href="https://bulma.io">
+      <a class="navbar-item" href="#home">
         <figure class="image is-64x64 mr-2">
           <img
             src="https://secure.gravatar.com/avatar/5763d82a3129a853b48b2fd7a5c21abd?s=64&r=g"
             alt="Bulma: a modern CSS framework based on Flexbox"
           />
         </figure>
-        <span class="ts-blue is-size-2 is-family-monospace">
-          <span class="has-text-weight-bold is-family-primary">Teck</span>
+        <span class="ts-blue is-size-2 is-family-primary has-text-weight-bold">
+          <span class="">Teck</span>
           <span class="ts-green">Stack</span>
         </span>
       </a>
       <div
-        class="navbar-burger burger"
+        class="navbar-burger burger mt-3"
         data-target="navbarExampleTransparentExample"
       >
         <span></span>
@@ -25,8 +25,17 @@
 
     <div id="navbarExampleTransparentExample" class="navbar-menu">
       <div class="navbar-end">
-        <a class="navbar-item" href="https://bulma.io/">
-          Home
+        <a class="navbar-item" href="#start">
+          <span class="tag is-dark is-medium is-info is-light">Start Here</span>
+        </a>
+        <a class="navbar-item" href="#articles">
+          Articles
+        </a>
+        <a class="navbar-item" href="#snippets">
+          Snippets
+        </a>
+        <a class="navbar-item" href="#resources">
+          Resources
         </a>
       </div>
     </div>
