--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header id="header">
-  <nav class="navbar is-transparent is-spaced">
+  <nav class="navbar container is-transparent is-spaced">
     <div class="navbar-brand">
       <a class="navbar-item" href="#home">
         <figure class="image is-64x64 mr-2">
